crates/analyzer/tests/snapshots/errors__map_one_type_arg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 1 was provided
  ┌─ [snippet]:3:10
  │
3 │   let x: Map<y>
  │          ^^^ - supplied 1 argument
  │          │    
  │          expects 2 arguments

error: undefined type
  ┌─ [snippet]:3:14
  │
3 │   let x: Map<y>
  │              ^ this type name has not been defined


